# glibc-nss_db-2.2

./: Makefile.am  Makefile.in  configure  configure.in  db-XXX.c  db-alias.c  db-compat.c  db-compat.h  db-ethers.c  db-grp.c  db-netgrp.c  db-open.c  db-proto.c  db-pwd.c  db-rpc.c  db-service.c  db-spwd.c  libnss_db.map  makedb.c  nss_db.h
